se agrega el front diseñado anteriormente y se añade la sección para ver la lista de oradores

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,10 +1,185 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Start Page</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    </head>
-    <body>
-        <h1>Hello World!</h1>
-    </body>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link type="image/x-icon" href="assets/images/codoacodo.png" rel="shortcut icon" />
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Trabajo Práctico Integrador</title>
+</head>
+<body>
+    <div class="container">
+        <header>
+            <nav class="navbar navbar-expand-md navbar-dark bg-dark" aria-label="Eighth navbar example">
+                <div class="container">
+                    <a class="navbar-brand" href="#">
+                        <img src="assets/images/codoacodo.png" alt="Logo de codo a codo" style="height: auto; width: 50px;" class="d-inline-block align-text-top">
+                        Conf Bs As
+                      </a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarsExample07">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">La Conferencia</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#lasAreas">Las Areas</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#contactUs">Contacto</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link text-success" href="tickets/tickets.html">Comprar Tickets</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
+        </header>
+        <main id="testRep">
+            <div class="container frontImage mb-3">
+                <div class="row">
+                    <div class="col-12 px-0">
+                        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                <div class="carousel-overlay"></div> <!-- Capa de oscurecimiento -->
+                                <img src="assets/images/teatro_colon_interior_nicolas1500x610.jpg" class="d-block w-100" alt="imagen del interior del Teatro Colón">
+                              </div>
+                              <div class="carousel-item">
+                                <div class="carousel-overlay"></div> <!-- Capa de oscurecimiento -->
+                                <img src="assets/images/teatro_colon_panoramica_1200_1.jpg" class="d-block w-100" alt="una imagen del exterior del Teatro Colón">
+                              </div>
+                              <div class="carousel-item">
+                                <div class="carousel-overlay"></div> <!-- Capa de oscurecimiento -->
+                                <img src="assets/images/cjfgdtc65xj8mnswxmo6.jpg" class="d-block w-100" alt="una imagen desde las butacas del Teatro Colón">
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-12 featuredPost align-self-end">
+                        <h2>Teatro Colón</h2>
+                        <p>El más imponente escenario está listo para albergar a una serie de profesionales que están ansiosos de contarte sus propuestas!</p>
+                        <div class="row">
+                            <div class="col-12 d-flex justify-content-end">
+                                <button type="button" class="btn btn-outline-light m-2">Quiero ser orador</button>
+                                <button type="button" class="btn btn-outline-success m-2" onclick="ticketRedirection()">Comprar Tickets</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container mb-3" id="lasAreas">
+                <div class="row">
+                    <div class="col-12 text-center mb-2">
+                        <h3>Conocé las áreas</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-4 col-lg-4 text-center">
+                        <div class="zoomOnHover">
+                            <img src="assets/images/html logo.png" class="img-fluid" alt="Una imagen sobre lenguaje HTML">
+                        </div>
+                            <h4>HTML</h4>
+                        <p>El Lenguaje de Marcado de Hipertexto (HTML) es el código que se utiliza para estructurar y desplegar una página web y sus contenidos.</p>
+                    </div>
+                    <div class="col-sm-12 col-md-4 col-lg-4 text-center">
+                        <div class="zoomOnHover">
+                            <img src="assets/images/aprender-css.jpg" class="img-fluid" alt="Una imagen sobre el código CSS">
+                        </div>
+                        <h4>CSS</h4>
+                        <p>El CSS es un lenguaje informático que especifica cómo se presentan los documentos a los usuarios: cómo se diseñan, compaginan, etc.</p>
+                    </div>
+                    <div class="col-sm-12 col-md-4 col-lg-4 text-center">
+                        <div class="zoomOnHover">
+                            <img src="assets/images/javascript.imagen.jpg" class="img-fluid" alt="Una imagen sobre el lenguaje de Javascript">
+                        </div>
+                        <h4>Javascript</h4>
+                        <p>JavaScript es un lenguaje de programación o de secuencias de comandos que te permite implementar funciones complejas en páginas web.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="container mb-3" id="oradores">
+              <div class="row">
+                  <div class="col-12 text-center mb-2">
+                      <h3>Oradores</h3>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-sm-12 col-md-6 col-lg-8 text-center">
+                    <h4>Lista de Oradores Confirmados</h4>
+                    <p>A continuación podrás consultar la lista de Oradores y sus Speechs que ya están confirmados!</p>
+                  </div>
+                  <div class="col-sm-12 col-md-6 col-lg-4 text-center">
+                    <button type="button" class="btn btn-primary btn-block mb-4">Ver Lista</button>
+                  </div>
+              </div>
+          </div>
+            <div class="container interestingArticle mb-3">
+                <div class="row">
+                    <div class="col-sm-12 col-md-6 col-lg-6 px-0">
+                        <img src="assets/images/0_KAO1Gm5fqpnKM49Y.jpg" class="img-fluid" alt="Una imagen de un escritorio de desarrollador web">
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-6">
+                        <h2>Web Developer Desktop</h2>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa vitae quia qui. Vel facilis eum quos iste deleniti doloremque blanditiis magnam rerum, a quae numquam cum ratione aliquam corrupti ex!</p>
+                        <button type="button" class="btn btn-outline-light mb-3">Conocer más!</button>
+                    </div>
+                </div>
+            </div>
+            <div class="container contactForm" id="contactUs">
+                <div class="row">
+                    <div class="col-12 text-center">
+                        <p>Tienes algo para decir? Conviértete en un:</p>
+                        <p class="h2">Orador</p>
+                        <p>Anotate a continuación y cuentanos de que quisieras charlar!</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <form id="formContact" action="registroOrador" method="post">
+                        <div class="row mb-4">
+                          <div class="col-sm-12 col-lg-6 col-md-6">
+                            <div class="form-outline">
+                              <input type="text" id="contactFormName" class="form-control" />
+                              <label class="form-label" for="contactFormName">Nombre</label>
+                            </div>
+                          </div>
+                          <div class="col-sm-12 col-lg-6 col-md-6">
+                            <div class="form-outline">
+                              <input type="text" id="contactFormSurname" class="form-control" />
+                              <label class="form-label" for="contactFormSurname">Apellido</label>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="form-outline mb-4">
+                          <input type="email" id="contactFormEmail" class="form-control" />
+                          <label class="form-label" for="contactFormEmail">Email</label>
+                        </div>
+                        <div class="form-outline mb-4">
+                            <textarea class="form-control" id="contactFormBody" rows="4" placeholder="Cuéntanos de que quisieras exponer"></textarea>
+                            <label class="form-label" for="contactFormBody">Recuerda agregar un título</label>
+                        </div>
+                        <div class="row m-1">
+                              <button type="submit" class="btn btn-primary btn-block mb-4" id="btnEnviar" value="enviar">Contactar!</button>
+                          </div>
+                      </form>
+                </div>
+            </div>
+        </main>
+        <footer class="py-3 my-4 darkFooter">
+            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+              <li class="nav-item"><a href="#contactUs" class="nav-link px-2">Contacto</a></li>
+              <li class="nav-item"><a href="#lasAreas" class="nav-link px-2">Las Areas</a></li>
+              <li class="nav-item"><a href="tickets/tickets.html" class="nav-link px-2">Comprar Tickets</a></li>
+              <li class="nav-item"><a href="#" class="nav-link px-2">Acerca de nosotros...</a></li>
+            </ul>
+            <p class="text-center">© 2023 Israel Montenegro Dev.</p>
+          </footer>
+    </div>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/redirect.js"></script>
+</body>
 </html>
