--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -27,7 +27,7 @@
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#lasAreas">Las Areas</a>
-                      </li>
+                      </li>                     
                       <li class="nav-item">
                         <a class="nav-link" href="#contactUs">Contacto</a>
                       </li>
@@ -114,7 +114,7 @@
                     <p>A continuación podrás consultar la lista de Oradores y sus Speechs que ya están confirmados!</p>
                   </div>
                   <div class="col-sm-12 col-md-6 col-lg-4 text-center">
-                    <button type="button" class="btn btn-primary btn-block mb-4">Ver Lista</button>
+                      <a href="vistas/verOradores.jsp" class="btn btn-success">Ver Lista</a>
                   </div>
               </div>
           </div>
@@ -143,27 +143,27 @@
                         <div class="row mb-4">
                           <div class="col-sm-12 col-lg-6 col-md-6">
                             <div class="form-outline">
-                              <input type="text" id="contactFormName" class="form-control" />
+                              <input type="text" name="nombre" id="nombre" class="form-control" />
                               <label class="form-label" for="contactFormName">Nombre</label>
                             </div>
                           </div>
                           <div class="col-sm-12 col-lg-6 col-md-6">
                             <div class="form-outline">
-                              <input type="text" id="contactFormSurname" class="form-control" />
+                              <input type="text" name="apellido" id="apellido" class="form-control" />
                               <label class="form-label" for="contactFormSurname">Apellido</label>
                             </div>
                           </div>
                         </div>
-                        <div class="form-outline mb-4">
+<!--                        <div class="form-outline mb-4">
                           <input type="email" id="contactFormEmail" class="form-control" />
                           <label class="form-label" for="contactFormEmail">Email</label>
-                        </div>
+                        </div>-->
                         <div class="form-outline mb-4">
-                            <textarea class="form-control" id="contactFormBody" rows="4" placeholder="Cuéntanos de que quisieras exponer"></textarea>
+                            <textarea class="form-control" name="tema" id="tema" rows="4" placeholder="Cuéntanos de que quisieras exponer"></textarea>
                             <label class="form-label" for="contactFormBody">Recuerda agregar un título</label>
                         </div>
                         <div class="row m-1">
-                              <button type="submit" class="btn btn-primary btn-block mb-4" id="btnEnviar" value="enviar">Contactar!</button>
+                              <button type="submit" class="btn btn-primary btn-block mb-4" id="btnEnviar" value="Enviar">Contactar!</button>
                           </div>
                       </form>
                 </div>
