se completa el proyecto agregando página de login, controllers y lógica para editar y eliminar registros

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,7 +15,7 @@
                 <div class="container">
                     <a class="navbar-brand" href="#">
                         <img src="assets/images/codoacodo.png" alt="Logo de codo a codo" style="height: auto; width: 50px;" class="d-inline-block align-text-top">
-                        Conf Bs As
+                        Conferencia Tecno
                       </a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -33,6 +33,9 @@
                       </li>
                       <li class="nav-item">
                         <a class="nav-link text-success" href="tickets/tickets.html">Comprar Tickets</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link text-success" href="vistas/login.jsp">Login</a>
                       </li>
                     </ul>
                   </div>
@@ -65,7 +68,7 @@
                         <p>El más imponente escenario está listo para albergar a una serie de profesionales que están ansiosos de contarte sus propuestas!</p>
                         <div class="row">
                             <div class="col-12 d-flex justify-content-end">
-                                <button type="button" class="btn btn-outline-light m-2">Quiero ser orador</button>
+                                <button type="button" class="btn btn-outline-light m-2"onclick="location.href='index.html#contactUs'">Quiero ser orador</button>
                                 <button type="button" class="btn btn-outline-success m-2" onclick="ticketRedirection()">Comprar Tickets</button>
                             </div>
                         </div>
@@ -75,7 +78,7 @@
             <div class="container mb-3" id="lasAreas">
                 <div class="row">
                     <div class="col-12 text-center mb-2">
-                        <h3>Conocé las áreas</h3>
+                        <h3>Conocé las áreas de formación</h3>
                     </div>
                 </div>
                 <div class="row">
@@ -124,8 +127,8 @@
                         <img src="assets/images/0_KAO1Gm5fqpnKM49Y.jpg" class="img-fluid" alt="Una imagen de un escritorio de desarrollador web">
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-6">
-                        <h2>Web Developer Desktop</h2>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa vitae quia qui. Vel facilis eum quos iste deleniti doloremque blanditiis magnam rerum, a quae numquam cum ratione aliquam corrupti ex!</p>
+                        <h2>Tu centro de operaciones</h2>
+                        <p>Desde la comodidad de tu casa, puedes acceder a todo el conocimiento y capacitaciones que encontrarás libre o de pago, sobre las tecnologías del futuro.</p>
                         <button type="button" class="btn btn-outline-light mb-3">Conocer más!</button>
                     </div>
                 </div>
@@ -163,7 +166,7 @@
                             <label class="form-label" for="contactFormBody">Recuerda agregar un título</label>
                         </div>
                         <div class="row m-1">
-                              <button type="submit" class="btn btn-primary btn-block mb-4" id="btnEnviar" value="Enviar">Contactar!</button>
+                              <button type="submit" class="btn btn-primary btn-block mb-4" id="btnEnviar" value="Enviar">Registrar Charla!</button>
                           </div>
                       </form>
                 </div>
